# dns_interface

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: format-check.yml  tests.yml
include/: dns_cache.h  dns_cache_base.h  dns_cache_testable.h
src/: dns_cache.cpp  dns_cache_base.cpp
tests/: test_dns_cache.cpp  test_dns_cache_singleton.cpp
